--- a/index2.html
+++ b/index2.html
@@ -67,6 +67,10 @@
       backdrop-filter: blur(2px);
     }
     .menuBackdrop[hidden]{ display:none; }
+    
+#contact{ min-height:auto !important; height:auto !important; }
+main{ min-height:auto !important; }
+
   </style>
 </head>
 
