--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,6 @@
 
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href=“assets/style.css">
-
 <style>
   /* =========================
      QUICK FIX (v0.1)
@@ -68,6 +67,8 @@
     padding-bottom:24px !important; /* เผื่อหายใจนิดเดียว */
   }
 </style>
+#contact{ min-height:auto !important; height:auto !important; }
+main{ min-height:auto !important; }
 </head>
 
 <body>
