--- a/index2.html
+++ b/index2.html
@@ -125,11 +125,12 @@
     margin-top:18px !important;
     padding-bottom:24px !important; /* เผื่อหายใจนิดเดียว */
   }
+    #contact{ min-height:auto !important; height:auto !important; }
+main{ min-height:auto !important; }
   </style>
 </head>
-
+  
 <body>
-
   <!-- TOPBAR (Social RIGHT only) -->
   <div class="topbar">
     <div class="right">
