--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,7 @@
 
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/main.js" defer></script>
 
   <!-- ✅ FIX OVERRIDES: กันเมนูซ้อน + จัด Mobile menu กางจากขวา (ไม่แตะโทนสีหลัก) -->
   <style>
