--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
     }
     @media (min-width: 861px){
       .siteHeader .navToggle{ display:none; }
-      #mobileMenu{ display:none !important; } /* กัน mobile menu โผล่บน desktop */
+    /* กัน mobile menu โผล่บน desktop */
     }
 
     /* ✅ Mobile Menu: slide from right */
@@ -148,26 +148,7 @@
   }
     section{ margin-bottom:24px !important; }
 section:last-of-type{ margin-bottom:0 !important; }
-
-    /* ✅ iPad/tablet: show hamburger, hide center menu */
-  @media (max-width: 1024px){
-    .siteHeader .navLinks{ display:none !important; }
-    .siteHeader .navToggle{ display:inline-flex !important; }
-  }
-  @media (min-width: 1025px){
-    .siteHeader .navToggle{ display:none !important; }
-  }
-
-  /* ✅ Make hamburger visible (not a tiny dot) */
-  .navToggle{
-    width:44px !important;
-    height:44px !important;
-    font-size:22px !important;
-    line-height:1 !important;
-    display:inline-flex !important;
-    align-items:center !important;
-    justify-content:center !important;
-  }
+  
  </style>
 </head>
   
