--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
   <!-- 🔗 เชื่อมไฟล์ CSS -->
   <link rel="stylesheet" href="assets/style.css">
+   <script src="assets/main.js" defer></script>
 </head>
 
 <body>
@@ -72,14 +73,16 @@
         <span class="brandText">KRUNIKI</span>
       </a>
 
+      <!-- ✅ Menu CENTER (Thai) -->
       <nav class="navLinks" aria-label="Primary navigation">
-        <a href="shop.html">SHOP</a>
+        <a href="shop.html">ร้านค้า</a>
         <a href="index.html">หน้าแรก</a>
         <a href="about.html">เกี่ยวกับ</a>
         <a href="services.html">บริการ</a>
         <a href="resources.html">คลังความรู้</a>
         <a href="contact.html">ติดต่อ</a>
-      </nav>
+    </nav>
+
 
       <button class="navToggle" type="button"
         aria-label="เปิดเมนู"
@@ -88,12 +91,12 @@
     </div>
 
    <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
-      <a href="shop.html">SHOP</a>
-      <a href="index.html">หน้าแรก</a>
-      <a href="about.html">เกี่ยวกับ</a>
-      <a href="services.html">บริการ</a>
-      <a href="resources.html">คลังความรู้</a>
-      <a href="contact.html">ติดต่อ</a>
+      <a href="shop.html">ร้านค้า</a>
+        <a href="index.html">หน้าแรก</a>
+        <a href="about.html">เกี่ยวกับ</a>
+        <a href="services.html">บริการ</a>
+        <a href="resources.html">คลังความรู้</a>
+        <a href="contact.html">ติดต่อ</a>
     </nav>
   </header>
 
