--- a/index2.html
+++ b/index2.html
@@ -148,7 +148,171 @@
   }
     section{ margin-bottom:24px !important; }
 section:last-of-type{ margin-bottom:0 !important; }
-  
+
+/* =========================
+   Hamburger Button (NEW)
+   - Mobile/iPad only
+   - Right side
+   - Gold when active
+========================= */
+
+.siteHeader .navToggle{
+  /* ใช้ inline-flex ตามที่มีอยู่แล้ว */
+  width:44px;
+  height:44px;
+  border:0;
+  padding:0;
+  border-radius:12px;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  background:transparent;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* กันล้นขอบและทำให้ชัด */
+.siteHeader .navToggle .icon{
+  width:22px;
+  height:16px;
+  position:relative;
+  display:block;
+}
+
+/* เส้น 3 ขีด */
+.siteHeader .navToggle .icon::before,
+.siteHeader .navToggle .icon::after,
+.siteHeader .navToggle .icon span{
+  content:"";
+  position:absolute;
+  left:0;
+  width:100%;
+  height:2px;
+  border-radius:2px;
+  background:currentColor;
+  transition:transform .2s ease, top .2s ease, opacity .2s ease, background-color .2s ease;
+}
+
+/* เส้นบน/กลาง/ล่าง */
+.siteHeader .navToggle .icon::before{ top:0; }
+.siteHeader .navToggle .icon span{ top:7px; }
+.siteHeader .navToggle .icon::after{ top:14px; }
+
+/* สี default (inherit จาก color) */
+.siteHeader .navToggle{
+  color: rgba(255,255,255,.92); /* ถ้าพื้นหลังเข้ม */
+}
+
+/* hover/focus ให้ดูพรีเมียม */
+.siteHeader .navToggle:hover{ background: rgba(255,255,255,.08); }
+.siteHeader .navToggle:focus-visible{
+  outline:2px solid rgba(255,255,255,.35);
+  outline-offset:2px;
+}
+
+/* ✅ Active = Gold */
+.siteHeader .navToggle.isActive,
+.siteHeader .navToggle[aria-expanded="true"]{
+  color: #d6b46a; /* soft gold */
+  background: rgba(214,180,106,.14);
+}
+
+/* (Optional) ตอนเปิด เปลี่ยนเป็น X */
+.siteHeader .navToggle.isActive .icon::before{
+  top:7px;
+  transform:rotate(45deg);
+}
+.siteHeader .navToggle.isActive .icon span{
+  opacity:0;
+}
+.siteHeader .navToggle.isActive .icon::after{
+  top:7px;
+  transform:rotate(-45deg);
+}
+
+/* =========================
+   NEW Hamburger Button
+========================= */
+
+/* ปุ่มกรอบพอดี ไม่ล้น */
+.siteHeader .navToggle{
+  width:44px;
+  height:44px;
+  border:0;
+  padding:0;
+  border-radius:12px;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+  background:transparent;
+  color: rgba(255,255,255,.92); /* สีเส้น default */
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* hover / focus */
+.siteHeader .navToggle:hover{
+  background: rgba(255,255,255,.08);
+}
+.siteHeader .navToggle:focus-visible{
+  outline:2px solid rgba(255,255,255,.35);
+  outline-offset:2px;
+}
+
+/* ตัวไอคอนเส้น */
+.siteHeader .navToggle .hamburger{
+  width:22px;
+  height:16px;
+  position:relative;
+  display:block;
+}
+
+/* เส้น 3 ขีด */
+.siteHeader .navToggle .hamburger::before,
+.siteHeader .navToggle .hamburger::after,
+.siteHeader .navToggle .hamburger span{
+  content:"";
+  position:absolute;
+  left:0;
+  width:100%;
+  height:2px;
+  border-radius:2px;
+  background: currentColor;
+  transition: transform .2s ease, top .2s ease, opacity .2s ease;
+}
+
+/* บน/กลาง/ล่าง */
+.siteHeader .navToggle .hamburger::before{ top:0; }
+.siteHeader .navToggle .hamburger span{ top:7px; }
+.siteHeader .navToggle .hamburger::after{ top:14px; }
+
+/* ✅ Active = Gold */
+.siteHeader .navToggle.isActive,
+.siteHeader .navToggle[aria-expanded="true"]{
+  color:#d6b46a;
+  background: rgba(214,180,106,.14);
+}
+
+/* ✅ Active: เปลี่ยนเป็น X */
+.siteHeader .navToggle.isActive .hamburger::before{
+  top:7px;
+  transform: rotate(45deg);
+}
+.siteHeader .navToggle.isActive .hamburger span{
+  opacity:0;
+}
+.siteHeader .navToggle.isActive .hamburger::after{
+  top:7px;
+  transform: rotate(-45deg);
+}
+
+/* ✅ Mobile/iPad only: ใช้ breakpoint เดิมของนิกี้ */
+@media (max-width: 860px){
+  .siteHeader .navToggle{ display:inline-flex; }
+}
+@media (min-width: 861px){
+  .siteHeader .navToggle{ display:none; }
+}    
  </style>
 </head>
   
