--- a/index2.html
+++ b/index2.html
@@ -391,14 +391,14 @@ section:last-of-type{ margin-bottom:0 !important; }
       </nav>
 
       <!-- ✅ Actions RIGHT (Hamburger) -->
-      <div class="navActions">
-        <button class="navToggle" id="navToggle" type="button"
-          aria-label="เปิดเมนู"
-          aria-expanded="false"
-          aria-controls="mobileMenu">☰</button>
-      </div>
-
-    </div>
+     <div class="navActions">
+  <button class="navToggle" id="navToggle" type="button"
+    aria-label="เปิดเมนู"
+    aria-expanded="false"
+    aria-controls="mobileMenu">
+    <span class="hamburger" aria-hidden="true"><span></span></span>
+  </button>
+  </div>
 
     <!-- Backdrop -->
     <div id="menuBackdrop" class="menuBackdrop" hidden></div>
