--- a/index2.html
+++ b/index2.html
@@ -396,9 +396,11 @@ section:last-of-type{ margin-bottom:0 !important; }
     aria-label="เปิดเมนู"
     aria-expanded="false"
     aria-controls="mobileMenu">
-    <span class="hamburger" aria-hidden="true"><span></span></span>
+    <svg class="hamIcon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+      <path d="M3 6.5h18M3 12h18M3 17.5h18" />
+    </svg>
   </button>
-  </div>
+</div>
 
     <!-- Backdrop -->
     <div id="menuBackdrop" class="menuBackdrop" hidden></div>
