--- a/index2.html
+++ b/index2.html
@@ -9,73 +9,19 @@
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/style.css">
   <script src="assets/main.js" defer></script>
+<style>
+  /* =========================================================
+     index2.html — CLEAN OVERRIDES (v1.0)
+     - Keep Social (TOPBAR) on the RIGHT
+     - Header layout: Brand LEFT / Menu CENTER / Actions RIGHT
+     - Mobile menu slides from RIGHT only
+     - Hide desktop nav on Mobile/iPad; show hamburger button on Mobile/iPad
+     - Reduce huge bottom gap (single, non-duplicated rules)
+     ========================================================= */
 
-  <!-- ✅ FIX OVERRIDES: กันเมนูซ้อน + จัด Mobile menu กางจากขวา (ไม่แตะโทนสีหลัก) -->
-  <style>
-    /* Header layout: brand left, menu center, actions right */
-    .siteHeader .navInner{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:14px;
-    }
-    .siteHeader .brand{ flex:0 0 auto; }
-    .siteHeader .navLinks{
-      flex:1 1 auto;
-      display:flex;
-      justify-content:center;
-      gap:18px;
-    }
-    .siteHeader .navActions{
-      flex:0 0 auto;
-      display:flex;
-      align-items:center;
-      gap:10px;
-    }
-
-    /* ✅ Desktop vs Mobile behavior */
-    @media (max-width: 860px){
-      .siteHeader .navLinks{ display:none; } /* กันเมนู desktop โผล่บนมือถือ */
-      .siteHeader .navToggle{ display:inline-flex; }
-    }
-    @media (min-width: 861px){
-      .siteHeader .navToggle{ display:none; }
-    /* กัน mobile menu โผล่บน desktop */
-    }
-
-    /* ✅ Mobile Menu: slide from right */
-    #mobileMenu.mobileMenu{
-      position:fixed;
-      top:0;
-      right:0;
-      height:100vh;
-      width:min(84vw, 360px);
-      padding:84px 18px 18px;
-      z-index:9999;
-      transform:translateX(100%);
-      transition:transform .25s ease;
-    }
-    #mobileMenu.mobileMenu.isOpen{
-      transform:translateX(0);
-    }
-
-    /* Backdrop */
-    .menuBackdrop{
-      position:fixed;
-      inset:0;
-      z-index:9998;
-      background:rgba(0,0,0,.45);
-      backdrop-filter: blur(2px);
-    }
-    .menuBackdrop[hidden]{ display:none; }
-
-     /* =========================
-     QUICK FIX (v0.1)
-     1) Social to RIGHT
-     2) Remove huge bottom gap
+  /* =========================
+     TOPBAR (Social RIGHT only)
   ========================= */
-
-  /* 1) Social to RIGHT */
   .topbar{
     display:flex;
     justify-content:flex-end;
@@ -94,226 +40,103 @@
     gap:10px;
   }
 
-  /* 2) Kill the huge bottom space (override whatever old css does) */
+  /* =========================
+     HEADER LAYOUT
+  ========================= */
+  .siteHeader .navInner{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:14px;
+  }
+  .siteHeader .brand{ flex:0 0 auto; }
+
+  .siteHeader .navLinks{
+    flex:1 1 auto;
+    display:flex;
+    justify-content:center;
+    gap:18px;
+  }
+
+  .siteHeader .navActions{
+    flex:0 0 auto;
+    display:flex;
+    align-items:center;
+    justify-content:flex-end;
+    gap:10px;
+  }
+
+  /* =========================
+     DESKTOP vs MOBILE/iPAD
+     - Mobile/iPad: hide desktop links, show hamburger button
+     - Desktop: hide hamburger button
+  ========================= */
+  @media (max-width: 860px){
+    .siteHeader .navLinks{ display:none; }
+    .siteHeader .navToggle{ display:inline-flex; }
+  }
+  @media (min-width: 861px){
+    .siteHeader .navToggle{ display:none; }
+  }
+
+  /* =========================
+     MOBILE MENU: SLIDE FROM RIGHT ONLY
+  ========================= */
+  #mobileMenu.mobileMenu{
+    position:fixed;
+    top:0;
+    right:0;
+    height:100vh;
+    width:min(84vw, 360px);
+    padding:84px 18px 18px;
+    z-index:9999;
+
+    transform:translateX(100%);
+    transition:transform .25s ease;
+
+    /* Optional: ensures menu is clickable and visible */
+    background: rgba(0,0,0,.92);
+    overflow:auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  #mobileMenu.mobileMenu.isOpen{
+    transform:translateX(0);
+  }
+
+  /* Backdrop */
+  .menuBackdrop{
+    position:fixed;
+    inset:0;
+    z-index:9998;
+    background:rgba(0,0,0,.45);
+    backdrop-filter: blur(2px);
+  }
+  .menuBackdrop[hidden]{ display:none; }
+
+  /* =========================
+     BOTTOM GAP FIX (single set)
+  ========================= */
   html, body{
     margin:0;
     padding:0;
     height:auto;
   }
 
-  /* ถ้า css เก่าตั้ง min-height หรือ padding-bottom ไว้ จะทำให้เกิดช่องว่างล่างบวม */
-  .wrap{
-    padding-bottom:0 !important;
-    margin-bottom:0 !important;
-    min-height:auto !important;
-  }
-  main.wrap{
-    padding-bottom:0 !important;
-    margin-bottom:0 !important;
-  }
-
-  section{
-    margin-bottom:24px; /* ให้มีระยะพอดี ไม่เป็นถนน */
-  }
-  #contact{
-    margin-bottom:0 !important;
-    padding-bottom:0 !important;
-  }
-  #contact .panel{
-    margin-bottom:0 !important;
-  }
-  footer{
-    margin-top:18px !important;
-    padding-bottom:24px !important; /* เผื่อหายใจนิดเดียว */
-  }
-  /* ✅ Kill huge bottom gap (hard override) */
   main, .wrap, #contact{
     min-height:auto !important;
     height:auto !important;
     padding-bottom:0 !important;
     margin-bottom:0 !important;
   }
-  #contact{ display:block !important; }
 
-  /* ถ้า panel/section ตัวท้ายถูกดันสูง */
-  #contact .panel{
-    padding-bottom:0 !important;
-    margin-bottom:0 !important;
-  }
+  section{ margin-bottom:24px !important; }
+  section:last-of-type{ margin-bottom:0 !important; }
 
-  /* footer มักทำให้ดูเหมือนมีช่องว่างล่าง */
   footer{
     margin-top:16px !important;
     padding:18px 0 18px !important;
   }
-    section{ margin-bottom:24px !important; }
-section:last-of-type{ margin-bottom:0 !important; }
-
-/* =========================
-   Hamburger Button (NEW)
-   - Mobile/iPad only
-   - Right side
-   - Gold when active
-========================= */
-
-.siteHeader .navToggle{
-  /* ใช้ inline-flex ตามที่มีอยู่แล้ว */
-  width:44px;
-  height:44px;
-  border:0;
-  padding:0;
-  border-radius:12px;
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  background:transparent;
-  -webkit-tap-highlight-color: transparent;
-}
-
-/* กันล้นขอบและทำให้ชัด */
-.siteHeader .navToggle .icon{
-  width:22px;
-  height:16px;
-  position:relative;
-  display:block;
-}
-
-/* เส้น 3 ขีด */
-.siteHeader .navToggle .icon::before,
-.siteHeader .navToggle .icon::after,
-.siteHeader .navToggle .icon span{
-  content:"";
-  position:absolute;
-  left:0;
-  width:100%;
-  height:2px;
-  border-radius:2px;
-  background:currentColor;
-  transition:transform .2s ease, top .2s ease, opacity .2s ease, background-color .2s ease;
-}
-
-/* เส้นบน/กลาง/ล่าง */
-.siteHeader .navToggle .icon::before{ top:0; }
-.siteHeader .navToggle .icon span{ top:7px; }
-.siteHeader .navToggle .icon::after{ top:14px; }
-
-/* สี default (inherit จาก color) */
-.siteHeader .navToggle{
-  color: rgba(255,255,255,.92); /* ถ้าพื้นหลังเข้ม */
-}
-
-/* hover/focus ให้ดูพรีเมียม */
-.siteHeader .navToggle:hover{ background: rgba(255,255,255,.08); }
-.siteHeader .navToggle:focus-visible{
-  outline:2px solid rgba(255,255,255,.35);
-  outline-offset:2px;
-}
-
-/* ✅ Active = Gold */
-.siteHeader .navToggle.isActive,
-.siteHeader .navToggle[aria-expanded="true"]{
-  color: #d6b46a; /* soft gold */
-  background: rgba(214,180,106,.14);
-}
-
-/* (Optional) ตอนเปิด เปลี่ยนเป็น X */
-.siteHeader .navToggle.isActive .icon::before{
-  top:7px;
-  transform:rotate(45deg);
-}
-.siteHeader .navToggle.isActive .icon span{
-  opacity:0;
-}
-.siteHeader .navToggle.isActive .icon::after{
-  top:7px;
-  transform:rotate(-45deg);
-}
-
-/* =========================
-   NEW Hamburger Button
-========================= */
-
-/* ปุ่มกรอบพอดี ไม่ล้น */
-.siteHeader .navToggle{
-  width:44px;
-  height:44px;
-  border:0;
-  padding:0;
-  border-radius:12px;
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  background:transparent;
-  color: rgba(255,255,255,.92); /* สีเส้น default */
-  -webkit-tap-highlight-color: transparent;
-}
-
-/* hover / focus */
-.siteHeader .navToggle:hover{
-  background: rgba(255,255,255,.08);
-}
-.siteHeader .navToggle:focus-visible{
-  outline:2px solid rgba(255,255,255,.35);
-  outline-offset:2px;
-}
-
-/* ตัวไอคอนเส้น */
-.siteHeader .navToggle .hamburger{
-  width:22px;
-  height:16px;
-  position:relative;
-  display:block;
-}
-
-/* เส้น 3 ขีด */
-.siteHeader .navToggle .hamburger::before,
-.siteHeader .navToggle .hamburger::after,
-.siteHeader .navToggle .hamburger span{
-  content:"";
-  position:absolute;
-  left:0;
-  width:100%;
-  height:2px;
-  border-radius:2px;
-  background: currentColor;
-  transition: transform .2s ease, top .2s ease, opacity .2s ease;
-}
-
-/* บน/กลาง/ล่าง */
-.siteHeader .navToggle .hamburger::before{ top:0; }
-.siteHeader .navToggle .hamburger span{ top:7px; }
-.siteHeader .navToggle .hamburger::after{ top:14px; }
-
-/* ✅ Active = Gold */
-.siteHeader .navToggle.isActive,
-.siteHeader .navToggle[aria-expanded="true"]{
-  color:#d6b46a;
-  background: rgba(214,180,106,.14);
-}
-
-/* ✅ Active: เปลี่ยนเป็น X */
-.siteHeader .navToggle.isActive .hamburger::before{
-  top:7px;
-  transform: rotate(45deg);
-}
-.siteHeader .navToggle.isActive .hamburger span{
-  opacity:0;
-}
-.siteHeader .navToggle.isActive .hamburger::after{
-  top:7px;
-  transform: rotate(-45deg);
-}
-
-/* ✅ Mobile/iPad only: ใช้ breakpoint เดิมของนิกี้ */
-@media (max-width: 860px){
-  .siteHeader .navToggle{ display:inline-flex; }
-}
-@media (min-width: 861px){
-  .siteHeader .navToggle{ display:none; }
-}    
- </style>
+</style>
 </head>
   
 <body>
