--- a/index2.html
+++ b/index2.html
@@ -213,13 +213,19 @@
         <a href="contact.html">ติดต่อ</a>
       </nav>
 
-      <!-- ✅ Actions RIGHT (Hamburger) -->
-     <div class="navActions">
-  <button class="navToggle" id="navToggle" type="button"
+      <!-- ✅ Actions RIGHT (NEW block: social + hamburger) -->
+<div class="krActions">
+
+  <!-- (ถ้านิกี้มี social อยู่แล้ว ไม่ต้องใส่ก็ได้) -->
+  <!-- <a class="krIcon" href="#" aria-label="Instagram">
+    <img src="assets/ig.svg" alt="" />
+  </a> -->
+
+  <button class="krHam" id="krHam" type="button"
     aria-label="เปิดเมนู"
     aria-expanded="false"
     aria-controls="mobileMenu">
-    <svg class="hamIcon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+    <svg class="krHamIcon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
       <path d="M3 6.5h18M3 12h18M3 17.5h18" />
     </svg>
   </button>
