--- a/index2.html
+++ b/index2.html
@@ -193,17 +193,17 @@
     </div>
   </div>
 
-  <!-- HEADER -->
+<!-- HEADER -->
 <header class="siteHeader">
   <div class="navInner">
 
-    <!-- ✅ Brand LEFT -->
+    <!-- Brand LEFT -->
     <a class="brand" href="index.html" aria-label="KRUNIKI Home">
       <span class="dot" aria-hidden="true"></span>
       <span class="brandText">KRUNIKI</span>
     </a>
 
-    <!-- ✅ Menu CENTER (Thai) -->
+    <!-- Desktop Menu CENTER -->
     <nav class="navLinks" aria-label="Primary navigation">
       <a href="shop.html">ร้านค้า</a>
       <a href="index.html">หน้าแรก</a>
@@ -213,7 +213,7 @@
       <a href="contact.html">ติดต่อ</a>
     </nav>
 
-    <!-- ✅ Actions RIGHT (Hamburger only) -->
+    <!-- ✅ Actions RIGHT (Hamburger = same size as IG) -->
     <div class="krActions">
       <button class="krHam" id="krHam" type="button"
         aria-label="เปิดเมนู"
@@ -225,12 +225,12 @@
       </button>
     </div>
 
-  </div><!-- ✅ IMPORTANT: close .navInner -->
+  </div><!-- close .navInner -->
 
   <!-- Backdrop -->
   <div id="menuBackdrop" class="menuBackdrop" hidden></div>
 
-  <!-- ✅ Mobile Menu (slide from right) -->
+  <!-- ✅ Mobile Menu (RIGHT -> vertical top-to-bottom) -->
   <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
     <a href="shop.html">ร้านค้า</a>
     <a href="index.html">หน้าแรก</a>
