--- a/index2.html
+++ b/index2.html
@@ -10,132 +10,174 @@
   <link rel="stylesheet" href="assets/style.css">
   <script src="assets/main.js" defer></script>
 <style>
-  /* =========================================================
-     index2.html — CLEAN OVERRIDES (v1.0)
-     - Keep Social (TOPBAR) on the RIGHT
-     - Header layout: Brand LEFT / Menu CENTER / Actions RIGHT
-     - Mobile menu slides from RIGHT only
-     - Hide desktop nav on Mobile/iPad; show hamburger button on Mobile/iPad
-     - Reduce huge bottom gap (single, non-duplicated rules)
-     ========================================================= */
+/* =========================================================
+   KR Mobile Hamburger Dropdown — CLEAN v1.0
+   ใช้กับ: #krHam, #mobileMenu, #menuBackdrop
+   - Desktop menu ไม่แตะ
+   - Mobile/iPad = dropdown ใต้ปุ่ม ☰ ฝั่งขวา เปิดลงแนวตั้ง
+========================================================= */
 
-  /* =========================
-     TOPBAR (Social RIGHT only)
-  ========================= */
-  .topbar{
-    display:flex;
-    justify-content:flex-end;
-    align-items:center;
-  }
-  .topbar .right{
-    margin-left:auto;
-    display:flex;
-    justify-content:flex-end;
-    width:100%;
-  }
-  .topbar .social{
-    display:flex;
-    justify-content:flex-end;
-    align-items:center;
-    gap:10px;
-  }
+:root{
+  --kr-icon: 44px;      /* ขนาดปุ่ม = เท่า IG */
+  --kr-gap: 10px;      /* ระยะห่างเท่า IG */
+  --kr-edge: 14px;     /* ระยะจากขอบขวา */
+  --kr-drop-top: 64px;/* ระยะจากขอบบนถึงเมนู (ปรับตามความสูง header) */
+}
 
-  /* =========================
-     HEADER LAYOUT
-  ========================= */
-  .siteHeader .navInner{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:14px;
-  }
-  .siteHeader .brand{ flex:0 0 auto; }
+/* รักษาระยะขอบขวาให้ไม่ชน safe-area */
+.siteHeader .navInner{
+  padding-right: calc(var(--kr-edge) + env(safe-area-inset-right));
+}
 
+/* กล่องปุ่มด้านขวา */
+.siteHeader .krActions{
+  display:flex;
+  align-items:center;
+  justify-content:flex-end;
+  gap: var(--kr-gap);
+  position: relative;
+  z-index: 10060; /* เหนือ backdrop */
+}
+
+/* =========================
+   DESKTOP (ห้ามแตะเมนูเดิม)
+========================= */
+@media (min-width: 861px){
+  #krHam{ display:none !important; }
+  #mobileMenu.mobileMenu{ display:none !important; }
+  #menuBackdrop.menuBackdrop{ display:none !important; }
+}
+
+/* =========================
+   MOBILE / iPAD
+========================= */
+@media (max-width: 860px){
+
+  /* ซ่อนเมนู desktop เฉพาะบนมือถือ */
   .siteHeader .navLinks{
-    flex:1 1 auto;
-    display:flex;
-    justify-content:center;
-    gap:18px;
+    display:none !important;
   }
 
-  .siteHeader .navActions{
-    flex:0 0 auto;
-    display:flex;
-    align-items:center;
-    justify-content:flex-end;
-    gap:10px;
+  /* ===== ปุ่ม Hamburger ===== */
+  #krHam{
+    display:inline-flex !important;
+    width: var(--kr-icon) !important;
+    height: var(--kr-icon) !important;
+    border: 0 !important;
+    padding: 0 !important;
+    border-radius: 12px !important;
+
+    background: transparent !important;   /* ❌ ไม่มีแท่งขาว */
+    color: rgba(255,255,255,.95) !important;
+
+    align-items:center !important;
+    justify-content:center !important;
+    cursor:pointer !important;
+
+    -webkit-tap-highlight-color: transparent !important;
+    touch-action: manipulation !important;
+
+    position: relative !important;
+    z-index: 10070 !important; /* อยู่เหนือ backdrop เสมอ */
   }
 
-  /* =========================
-     DESKTOP vs MOBILE/iPAD
-     - Mobile/iPad: hide desktop links, show hamburger button
-     - Desktop: hide hamburger button
-  ========================= */
-  @media (max-width: 860px){
-    .siteHeader .navLinks{ display:none; }
-    .siteHeader .navToggle{ display:inline-flex; }
-  }
-  @media (min-width: 861px){
-    .siteHeader .navToggle{ display:none; }
+  #krHam:hover{
+    background: rgba(255,255,255,.08) !important;
   }
 
-  /* =========================
-     MOBILE MENU: SLIDE FROM RIGHT ONLY
-  ========================= */
-  #mobileMenu.mobileMenu{
-    position:fixed;
-    top:0;
-    right:0;
-    height:100vh;
-    width:min(84vw, 360px);
-    padding:84px 18px 18px;
-    z-index:9999;
-
-    transform:translateX(100%);
-    transition:transform .25s ease;
-
-    /* Optional: ensures menu is clickable and visible */
-    background: rgba(0,0,0,.92);
-    overflow:auto;
-    -webkit-overflow-scrolling: touch;
-  }
-  #mobileMenu.mobileMenu.isOpen{
-    transform:translateX(0);
+  #krHam:focus-visible{
+    outline: 2px solid rgba(255,255,255,.35) !important;
+    outline-offset: 2px !important;
   }
 
-  /* Backdrop */
-  .menuBackdrop{
-    position:fixed;
-    inset:0;
-    z-index:9998;
-    background:rgba(0,0,0,.45);
+  /* ไอคอน 3 ขีด (SVG) */
+  #krHam .krHamIcon{
+    width: 26px !important;
+    height: 26px !important;
+    display:block !important;
+  }
+
+  #krHam .krHamIcon path{
+    fill: none !important;
+    stroke: currentColor !important;   /* ใช้สีของปุ่ม */
+    stroke-width: 2.8 !important;      /* ทำให้ขีดหนา ชัด */
+    stroke-linecap: round !important;
+  }
+
+  /* กดแล้ว = สีทอง */
+  #krHam.isActive,
+  #krHam[aria-expanded="true"]{
+    color: #d6b46a !important;
+    background: rgba(214,180,106,.14) !important;
+  }
+
+  /* ===== Backdrop ===== */
+  #menuBackdrop.menuBackdrop{
+    position: fixed;
+    inset: 0;
+    z-index: 9990 !important;
+    background: rgba(0,0,0,.35);
     backdrop-filter: blur(2px);
   }
-  .menuBackdrop[hidden]{ display:none; }
 
-  /* =========================
-     BOTTOM GAP FIX (single set)
-  ========================= */
-  html, body{
-    margin:0;
-    padding:0;
-    height:auto;
+  #menuBackdrop.menuBackdrop[hidden]{
+    display:none;
   }
 
-  main, .wrap, #contact{
-    min-height:auto !important;
-    height:auto !important;
-    padding-bottom:0 !important;
-    margin-bottom:0 !important;
+  /* ===== Mobile Dropdown Menu (ใต้ปุ่ม, ฝั่งขวา, เปิดลง) ===== */
+  #mobileMenu.mobileMenu{
+    position: fixed !important;
+
+    top: calc(var(--kr-drop-top) + env(safe-area-inset-top)) !important;
+    right: calc(var(--kr-edge) + env(safe-area-inset-right)) !important;
+
+    width: min(78vw, 320px) !important;
+    z-index: 10000 !important;
+
+    background: rgba(0,0,0,.92) !important;
+    border-radius: 16px !important;
+    padding: 12px !important;
+
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 8px !important;
+
+    /* เริ่มต้น = ปิด */
+    transform: translateY(-10px) !important;
+    opacity: 0 !important;
+    pointer-events: none !important;
+    max-height: 0 !important;
+    overflow: hidden !important;
+
+    transition: 
+      opacity .18s ease,
+      transform .18s ease,
+      max-height .22s ease;
   }
 
-  section{ margin-bottom:24px !important; }
-  section:last-of-type{ margin-bottom:0 !important; }
-
-  footer{
-    margin-top:16px !important;
-    padding:18px 0 18px !important;
+  /* เปิดเมนู */
+  #mobileMenu.mobileMenu.isOpen{
+    transform: translateY(0) !important;
+    opacity: 1 !important;
+    pointer-events: auto !important;
+    max-height: 70vh !important;
+    overflow: auto !important;
+    -webkit-overflow-scrolling: touch !important;
   }
+
+  /* ลิงก์เมนูแนวตั้ง */
+  #mobileMenu.mobileMenu a{
+    display:block !important;
+    padding: 12px 12px !important;
+    border-radius: 12px !important;
+    text-decoration: none !important;
+  }
+}
+
+/* (เลือกใช้) ล็อกสกอลล์ตอนเมนูเปิด */
+html.menuOpen, body.menuOpen{
+  overflow: hidden !important;
+}
 </style>
 </head>
   
@@ -203,7 +245,7 @@
       <span class="brandText">KRUNIKI</span>
     </a>
 
-    <!-- Desktop Menu CENTER -->
+    <!-- Desktop Menu CENTER (เดิม ไม่แตะโครงสร้าง/ลิงก์) -->
     <nav class="navLinks" aria-label="Primary navigation">
       <a href="shop.html">ร้านค้า</a>
       <a href="index.html">หน้าแรก</a>
@@ -213,7 +255,7 @@
       <a href="contact.html">ติดต่อ</a>
     </nav>
 
-    <!-- ✅ Actions RIGHT (Hamburger = same size as IG) -->
+    <!-- ✅ Mobile/iPad only: Hamburger -->
     <div class="krActions">
       <button class="krHam" id="krHam" type="button"
         aria-label="เปิดเมนู"
@@ -227,10 +269,10 @@
 
   </div><!-- close .navInner -->
 
-  <!-- Backdrop -->
+  <!-- Backdrop (behind button) -->
   <div id="menuBackdrop" class="menuBackdrop" hidden></div>
 
-  <!-- ✅ Mobile Menu (RIGHT -> vertical top-to-bottom) -->
+  <!-- ✅ Mobile dropdown menu: under ☰, right side, vertical -->
   <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
     <a href="shop.html">ร้านค้า</a>
     <a href="index.html">หน้าแรก</a>
