--- a/index2.html
+++ b/index2.html
@@ -8,140 +8,8 @@
 
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/hamburger.css">
   <script src="assets/main.js" defer></script>
-
-  <style>
-/* =========================================================
-   MOBILE MENU (TOP-RIGHT DROPDOWN) — v1.0
-   ✅ Open DOWN from top-right (not left-right)
-   ✅ Vertical list top-to-bottom
-   ✅ Backdrop behind button
-   ========================================================= */
-
-:root{
-  --kr-icon: 44px;
-  --kr-gap: 10px;
-  --kr-edge: 14px;
-}
-
-/* Keep button away from right edge like IG */
-.siteHeader .navInner{
-  padding-right: calc(var(--kr-edge) + env(safe-area-inset-right)) !important;
-}
-
-.siteHeader .krActions{
-  position: relative !important;
-  z-index: 10060 !important;
-  display:flex;
-  justify-content:flex-end;
-  align-items:center;
-  gap: var(--kr-gap);
-}
-
-/* Desktop: no hamburger, no mobile menu */
-@media (min-width: 861px){
-  .siteHeader .navLinks{ display:flex !important; }
-  .siteHeader #krHam{ display:none !important; }
-  #mobileMenu.mobileMenu{ display:none !important; }
-  #menuBackdrop.menuBackdrop{ display:none !important; }
-}
-
-/* Mobile/iPad */
-@media (max-width: 860px){
-  .siteHeader .navLinks{ display:none !important; }
-
-  /* Hamburger button */
-  .siteHeader #krHam{
-    display:inline-flex !important;
-    width: var(--kr-icon) !important;
-    height: var(--kr-icon) !important;
-    border:0 !important;
-    padding:0 !important;
-    border-radius:12px !important;
-    background:transparent !important;
-    color: rgba(255,255,255,.95) !important;
-    align-items:center !important;
-    justify-content:center !important;
-    cursor:pointer !important;
-    -webkit-tap-highlight-color: transparent !important;
-    touch-action: manipulation !important;
-    position: relative !important;
-    z-index: 10070 !important; /* above backdrop */
-  }
-
-  .siteHeader #krHam .krHamIcon{ width:26px !important; height:26px !important; display:block !important; }
-  .siteHeader #krHam .krHamIcon path{
-    fill:none !important;
-    stroke: currentColor !important;
-    stroke-width:2.8 !important;
-    stroke-linecap:round !important;
-  }
-
-  /* Active = Gold */
-  .siteHeader #krHam.isActive,
-  .siteHeader #krHam[aria-expanded="true"]{
-    color:#d6b46a !important;
-    background: rgba(214,180,106,.14) !important;
-  }
-
-  /* Backdrop behind button */
-  #menuBackdrop.menuBackdrop{
-    position: fixed;
-    inset: 0;
-    z-index: 9990 !important;
-    background: rgba(0,0,0,.35);
-    backdrop-filter: blur(2px);
-  }
-  #menuBackdrop.menuBackdrop[hidden]{ display:none; }
-
-  /* ✅ TOP-RIGHT DROPDOWN MENU (opens DOWN) */
-  #mobileMenu.mobileMenu{
-    position: fixed !important;
-    top: calc(12px + env(safe-area-inset-top)) !important;
-    right: calc(var(--kr-edge) + env(safe-area-inset-right)) !important;
-
-    width: min(78vw, 320px) !important;
-    z-index: 10000 !important;
-
-    background: rgba(0,0,0,.92) !important;
-    border-radius: 16px !important;
-    padding: 12px !important;
-
-    /* start collapsed */
-    transform: translateY(-10px) !important;
-    opacity: 0 !important;
-    pointer-events: none !important;
-    max-height: 0 !important;
-    overflow: hidden !important;
-
-    transition: opacity .18s ease, transform .18s ease, max-height .22s ease;
-    display: flex !important;
-    flex-direction: column !important;
-    gap: 8px !important;
-  }
-
-  /* open state */
-  #mobileMenu.mobileMenu.isOpen{
-    transform: translateY(0) !important;
-    opacity: 1 !important;
-    pointer-events: auto !important;
-    max-height: 70vh !important;
-    overflow: auto !important;
-    -webkit-overflow-scrolling: touch !important;
-  }
-
-  /* menu links vertical */
-  #mobileMenu.mobileMenu a{
-    display:block !important;
-    padding: 12px 12px !important;
-    border-radius: 12px !important;
-    text-decoration: none !important;
-  }
-}
-
-/* Scroll lock (optional — ปิดได้ถ้าไม่ต้องการล็อก) */
-html.menuOpen, body.menuOpen{ overflow:hidden !important; }
-</style>
 </head>
   
 <body>
