--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
 
   <!-- 🔗 CSS เดิมของนิกี้ -->
+  <link rel="stylesheet" href="assets/css2/app.css">
   <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet" href="assets/hamburger.css">
   <script src="assets/main.js" defer></script>
